--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         "laravelcollective/html": "^5.2",
         "davejamesmiller/laravel-breadcrumbs": "^3.0",
         "lavary/laravel-menu": "^1.6",
-        "lavary/crunz": "1.3.7"
+        "lavary/crunz": "^1.4"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
